Finished structure of index.html

--- a/index.html
+++ b/index.html
@@ -5,17 +5,64 @@
 </head>
 <body>
 
-<!-- header contains navigation -->
-<header>
-    <h1> Marioclub </h1>
-</header>
+    <!-- header contains navigation -->
+    <header>
+        <h1> Marioclub </h1>
+    </header>
 
-<!-- section for banner -->
-<section class = "banner">
-    <img src="img/banner.png" alt = "mario club welcome banner">
-</section>
+    <!-- section for banner -->
+    <section class = "banner">
+        <img src="img/banner.png" alt = "mario club welcome banner">
+        <!-- Welcome message -->
+        <div class="welcome">
+            <h2>Welcome to <br><span>Marioclub</span></h2>
+        </div>
+    </section>
 
+    <!-- Navigation -->
+    <nav class="nav-bar">
+        <ul>
+            <li> <a href="join.html" class="join">Join the club</a> </li>
+            <li> <a href="news.html">Latest news</a> </li>
+            <li> <a href="games.html">New games</a> </li>
+            <li> <a href="contact.html">Contact</a> </li>
+        </ul>
+    </nav>
+
+    <!-- Main Content -->
+    <main>
+        <!-- About the page -->
+        <article>
+            <h2> A Marioclub page </h2>
+            <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias, dolorem repellendus. 
+            Soluta quibusdam obcaecati necessitatibus, hic quod laboriosam velit officia officiis ullam 
+            distinctio, molestias mollitia perspiciatis. Officiis provident nostrum eveniet!
+            </p>
+        </article>
+
+        <!-- Some images -->
+        <ul class="main-images">
+            <li><img src="img/thumb-1.png" alt="mario-thumb-1"></li>
+            <li><img src="img/thumb-2.png" alt="mario-thumb-2"></li>
+        </ul>
+    </main>
+
+    <!-- Join form-->
+    <section class="join">
+        <h2>Join Today!</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero similique deleniti voluptates 
+        facilis saepe odit illum corrupti aliquam vel? Mollitia vero accusantium molestias? 
+        Earum deleniti eum aperiam facilis necessitatibus est?</p>
+        <form>
+            <input type="email" name="email" placeholder="Type email & hit enter" required>
+        </form>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p class="footer">Copyright 2019 Marioclub</p>
+    </footer>
 
 </body>
 </html>  
->>>>>>> e454076ad8ad7b7c25b9ca3a08564d8c18b0f2bd
