--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
         <article>
             <h2> A Marioclub page </h2>
             <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias, dolorem repellendus. 
-            Soluta quibusdam obcaecati necessitatibus, hic quod laboriosam velit officia officiis ullam 
-            distinctio, molestias mollitia perspiciatis. Officiis provident nostrum eveniet!
+            Mario[e] is a character created by Japanese video game designer Shigeru Miyamoto. He is the title character of the Mario franchise and the mascot of Japanese video game company Nintendo. Mario has appeared in over 200 video games since his creation. Depicted as a short, pudgy, Italian plumber who resides in the Mushroom Kingdom, his adventures generally center on rescuing Princess Peach from the Koopa villain Bowser. Mario has access to a variety of power-ups that give him different abilities. Mario's fraternal twin brother is Luigi.
+            </p>
+            <p>
+            Mario first appeared as the player character of Donkey Kong (1981), a platform game. Miyamoto wanted to use Popeye as the protagonist, but when he could not achieve the licensing rights, he created Mario instead. Miyamoto expected the character to be unpopular and planned to use him for cameo appearances; originally called "Mr. Video", he was renamed to Mario after Mario Segale. Mario's clothing and characteristics were themed after the setting of Donkey Kong. He then began to star in the Super Mario series of platform games, beginning with the critically acclaimed Super Mario Bros. in 1985. Since 1992, Mario has been voiced by Charles Martinet.
+            </p>
+            <p>
+            This page aims to bring up mario fans all around the world with a positive community, sharing fatcs, stories, easter eggs, and many more. We only accept positivity in this community thus only allowing real fans to join in. We do sessions between once and a while in which we gather up to play some mario games and have a good time.    
             </p>
         </article>
 
@@ -51,9 +55,8 @@
     <!-- Join form-->
     <section class="join">
         <h2>Join Today!</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero similique deleniti voluptates 
-        facilis saepe odit illum corrupti aliquam vel? Mollitia vero accusantium molestias? 
-        Earum deleniti eum aperiam facilis necessitatibus est?</p>
+        <p>Provides you with a valuable source of fresh, quality, advertiser-friendly articles, news, and game reviews.
+        It can be lonely gaming on your own so we’ll be adding a forum in the near future where you can chat and game with other members of the club.</p>
         <form>
             <input type="email" name="email" placeholder="Type email & hit enter" required>
         </form>
